syntax = "proto3";

package scr.proto.registration;

option java_package = "scr.proto.registration";
option java_multiple_files = true;

message RegistrationModel {
	string email = 1;
	string password = 2;
}

message RegistrationResponse {
	bool is_succeeded = 1;
}

message RegistrationRequest {
	RegistrationModel registration_model = 1;
}

service RegistrationService {

	// Unary API
	rpc register(RegistrationRequest) returns (RegistrationResponse) {};
} 